Fix: solved map & nav menu overlap when toggled

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -46,6 +46,7 @@ address a{
 
 .hamburger-toggle .fa-times.open {
     display: block;
+    position: fixed;
 }
 
 .hamburger-toggle .fa-bars.open {
@@ -53,13 +54,14 @@ address a{
 }
 
 .nav-list {
-    position: absolute;
+    background-color: rgba(0, 0, 2, 1);
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100vh;
     list-style: none;
-    z-index: 5;
+    z-index: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -182,13 +184,15 @@ address a{
     padding-bottom: 50px;
 }
 
-#map{
+.map{
     height: 350px;
     width: 100%;
     text-align: center;
     margin:auto;
     margin-top: 50px;
+    z-index: 25;
 }
+
 
 .address-details{
     font-family: "cairo", sans-serif;
